change for eng to thai

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Contact Us</title>
+  <title>ติดต่อเรา</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -19,29 +19,29 @@
               <form>
                 <div class="top-wrapper">
                   <div class="input">
-                    <label>Name</label>
+                    <label>ชื่อ</label>
                     <input type="text" name="name" />
                   </div>
                   <div class="input">
-                    <label>Phone</label>
+                    <label>หมายเลขโทรศัพท์</label>
                     <input type="text" name="phone" />
                   </div>
                   <div class="input">
-                    <label>Email</label>
+                    <label>อีเมล</label>
                     <input type="text" name="_replyto" />
                   </div>
                 </div>
                 <div class="bottom-wrapper">
                   <div class="input">
-                    <label>Subject</label>
+                    <label>หัวข้อ</label>
                     <input type="text" name="_subject" />
                   </div>
                   <div class="input">
-                    <label>Message</label>
+                    <label>ข้อความ</label>
                     <textarea rows="5" name="message"></textarea>
                   </div>
                   <div class="submit">
-                    <div class="submit-card" on-click="toggle('flipCard')">Send Mail</div>
+                    <div class="submit-card" on-click="toggle('flipCard')">ส่งเมล</div>
                   </div>
                 </div>
               </form>
